<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_home"
            android:icon="?attr/actionModeShareDrawable"
            android:title="@string/str_home" />
        <item
            android:id="@+id/nav_menu_Guides"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/str_settings" />
        <item
            android:id="@+id/nav_menu_examples"
            android:icon="@android:drawable/sym_contact_card"
            android:title="@string/str_examples" />
        <item
            android:id="@+id/nav_menu_apaword"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/str_apaword" />
        <item
            android:id="@+id/nav_menu_abouts"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/str_abouts" />

    </group>

</menu>