<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackground"
    android:gravity="center"
    tools:context=".APARExamplesFragment">


    <LinearLayout
        android:id="@+id/llType_0"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?android:attr/colorPrimary"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnESource"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/electronic_sources"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnSResource"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/secondary_resource"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llType_1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/llType_0"
        android:layout_marginBottom="2dp"
        android:background="?android:attr/colorPrimary"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBooks"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/books"
            android:textAlignment="center"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnJOP"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/journals_or_periodicals"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout>

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llType_1"
        android:layout_marginTop="5dp" />
</RelativeLayout>
